# src/api/swagger.json
@@ -52,7 +52,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Get User",
+                "summary": "Update User",
                 "parameters": [
                     {
                         "description": "upadte user body",
@@ -69,6 +69,46 @@
                         "description": "Success",
                         "schema": {
                             "$ref": "#/definitions/responses.UserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.InterServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/refresh-token": {
+            "post": {
+                "description": "Create new access token from refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get New AccessToken",
+                "parameters": [
+                    {
+                        "description": "refresh token body",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_iarsham_shop-api_internal_dto.RefreshTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/responses.RefreshTokenResponse"
                         }
                     },
                     "500": {
@@ -214,6 +254,18 @@
         }
     },
     "definitions": {
+        "github_com_iarsham_shop-api_internal_dto.RefreshTokenRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTY5NDE4MTcsInBob25lIjoiKzk4OTAyMTMxMjIyNCIsInVzZXJfaWQiOiI1In0.hzmZdfltaMDWaiTwO8IG1uPEyXOsu3JBs6giU2BDeMI"
+                }
+            }
+        },
         "github_com_iarsham_shop-api_internal_dto.RegisterRequest": {
             "type": "object",
             "required": [
@@ -334,6 +386,15 @@
                 "response": {
                     "type": "string",
                     "example": "code is incorrect"
+                }
+            }
+        },
+        "responses.RefreshTokenResponse": {
+            "type": "object",
+            "properties": {
+                "response": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTY5NDE4MTcsInBob25lIjoiKzk4OTAyMTMxMjIyNCIsInVzZXJfaWQiOiI1In0.hzmZdfltaMDWaiTwO8IG1uPEyXOsu3JBs6giU2BDeMI"
                 }
             }
         },
