# src/pkg/responses/users.go
@@ -36,3 +36,7 @@ type OtpIncorrectResponse struct {
 type UserResponse struct {
 	models.Users
 }
+
+type RefreshTokenResponse struct{
+	Response string `example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTY5NDE4MTcsInBob25lIjoiKzk4OTAyMTMxMjIyNCIsInVzZXJfaWQiOiI1In0.hzmZdfltaMDWaiTwO8IG1uPEyXOsu3JBs6giU2BDeMI"`
+}
